@@ -71,7 +71,50 @@ E <- function(graph) {
   } else {
     # language expression, we also do attribute based indexing
     graph <- get("graph", attr(x, "env"))
-    i <- eval(i, c(graph[[9]][[3]], as.list(parent.frame())))
+    nei <- function(v, mode=3) {
+      ## TRUE iff the vertex is a neighbor (any type)
+      ## of at least one vertex in v
+      if (is.character(mode)) {
+        mode <- switch(mode, "out"=1, "in"=2, "all"=3, "total"=3)
+      }
+      if (is.logical(v)) {
+        v <- which(v)
+      }
+      tmp <- .Call("R_igraph_vs_nei", graph, x, as.igraph.vs(v),
+                   as.numeric(mode),
+                   PACKAGE="igraph")
+      tmp[as.numeric(x)+1]
+    }
+    adj <- function(e) {
+      ## TRUE iff the vertex (in the vs) is adjacent
+      ## to at least one edge in e
+      if (is.logical(e)) {
+        e <- which(e)
+      }
+      tmp <- .Call("R_igraph_vs_adj", graph, x, as.igraph.es(e), as.numeric(3),
+                   PACKAGE="igraph")
+      tmp[as.numeric(x)+1]
+    }
+    from <- function(e) {
+      ## TRUE iff the vertex is the source of at least one edge in e
+      if (is.logical(e)) {
+        e <- which(e)
+      }
+      tmp <- .Call("R_igraph_vs_adj", graph, x, as.igraph.es(e), as.numeric(1),
+                   PACKAGE="igraph")
+      tmp[as.numeric(x)+1]
+    }
+    to <- function(e) {
+      ## TRUE iff the vertex is the target of at least one edge in e
+      if (is.logical(e)) {
+        e <- which(e)
+      }
+      tmp <- .Call("R_igraph_vs_adj", graph, x, as.igraph.es(e), as.numeric(2),
+                   PACKAGE="igraph")
+      tmp[as.numeric(x)+1]
+    }
+    i <- eval(i, c(graph[[9]][[3]], adj=adj, nei=nei, from=from, to=to,
+                   as.list(parent.frame())))
     if (is.numeric(i) || is.integer(i)) {
       i <- as.numeric(i)
       res <- i[ i %in% x ]
@@ -101,10 +144,23 @@ E <- function(graph) {
     # language expression, we also do attribute based indexing
     graph <- get("graph", attr(x, "env"))
     i <- substitute(i)
-    adj <- function(idx) {
-      from <- get("from", parent.frame())
-      to <- get("to", parent.frame())
-      (from %in% idx) | (to %in% idx)
+    adj <- function(v) {
+      ## TRUE iff the edge is adjacent to at least one vertex in v
+      tmp <- .Call("R_igraph_es_adj", graph, x, as.igraph.vs(v), as.numeric(3),
+                   PACKAGE="igraph")
+      tmp[ as.numeric(x)+1 ]
+    }
+    from <- function(v) {
+      ## TRUE iff the edge originates from at least one vertex in v
+      tmp <- .Call("R_igraph_es_adj", graph, x, as.igraph.vs(v), as.numeric(1),
+                   PACKAGE="igraph")
+      tmp[ as.numeric(x)+1 ]      
+    }
+    to <- function(v) {
+      ## TRUE iff the edge points to at least one vertex in v
+      tmp <- .Call("R_igraph_es_adj", graph, x, as.igraph.vs(v), as.numeric(2),
+                   PACKAGE="igraph")
+      tmp[ as.numeric(x)+1 ]
     }
     i <- eval(i, c(graph[[9]][[4]], from=list(graph[[3]][ as.numeric(x)+1 ]),
                    to=list(graph[[4]][as.numeric(x)+1]), graph=list(graph),
